--- a/aespa.css
+++ b/aespa.css
@@ -1,14 +1,197 @@
-li{
+@import url('https://fonts.googleapis.com/css2?family=Unlock&display=swap');
+.unlock-regular {
+    font-family: "Unlock", serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+}
+
+h5 {
+    color: #ffffff;
+    font-size: 35px;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.musicas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.player {
+    margin: 1%;
+    width: 300px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    box-shadow: o 50px 80px rgb(rgb(14, 12, 12), rgb(0, 0, 0), rgb(0, 0, 0));
+}
+
+.player .imgbox {
+    position: relative;
+    width: 100%;
+    height: 400px;
+}
+
+.player .imgbox img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.player audio {
+    width: 100%;
+    outline: none;
+}
+
+
+/*player2*/
+
+.player2 {
+    margin: 1%;
+    width: 300px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    box-shadow: o 50px 80px rgb(rgb(14, 12, 12), rgb(0, 0, 0), rgb(0, 0, 0));
+}
+
+.player2 .imgbox {
+    position: relative;
+    width: 100%;
+    height: 400px;
+}
+
+.player2 .imgbox img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.player2 audio {
+    width: 100%;
+    outline: none;
+}
+
+
+/*player3*/
+
+
+/* .player3{
+  margin:1%;
+   width: 300px;
+   background-color:rgb(255, 255, 255) ;
+   border-radius: 20px;
+  box-shadow: o 50px 80px rgb(rgb(14, 12, 12), rgb(0, 0, 0), rgb(0, 0, 0));
+ }
+ 
+ .player3 .imgbox{
+   position: relative;
+   width: 100%;
+   height: 400px;
+ 
+ }
+ 
+ .player3 .imgbox img{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   border-top-left-radius: 20px;
+   border-top-right-radius: 20px;
+ }
+ 
+ .player3 audio{
+   width: 100%;
+   outline: none;
+ 
+ } */
+
+.player3 {
+    margin: 1%;
+    width: calc(33% - 2%);
+    /* Três players lado a lado */
+    max-width: 300px;
+    /* Limite máximo de largura */
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    box-shadow: 0 50px 80px rgba(14, 12, 12, 0.1);
+    /* Corrigido */
+}
+
+.player3 .imgbox {
+    position: relative;
+    width: 100%;
+    height: 400px;
+}
+
+.player3 .imgbox img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.player3 audio {
+    width: 100%;
+    outline: none;
+}
+
+
+/* Responsividade */
+
+@media (max-width: 900px) {
+    .player3 {
+        width: calc(50% - 2%);
+        /* Dois players lado a lado em telas menores */
+    }
+}
+
+@media (max-width: 600px) {
+    .player3 {
+        width: calc(100% - 2%);
+        /* Um player por linha em telas pequenas */
+    }
+}
+
+
+/*******************************/
+
+li {
     list-style: none;
 }
-#navbar{
+
+#navbar {
     background-color: #6E1AE8;
     height: 4%;
     width: 100%;
 }
-body{
-    background: rgb(97,29,242);
-    background: linear-gradient(90deg, rgba(97,29,242,1) 0%, rgba(110,26,232,1) 35%, rgba(131,82,235,1) 100%);
+
+body {
+    background: rgb(97, 29, 242);
+    background: linear-gradient(90deg, rgba(97, 29, 242, 1) 0%, rgba(110, 26, 232, 1) 35%, rgba(131, 82, 235, 1) 100%);
 }
 
 .conteudo {
@@ -17,47 +200,49 @@ body{
     padding: 2rem 1.5rem;
     margin: 0 auto;
     color: #241623;
-    
-  }
-  
-  h1 {
+}
+
+h1 {
     font-weight: 900;
     font-size: 2.7rem;
     max-width: 20ch;
     color: #ffffff;
-  }
-  
-  p {
+}
+
+p {
     max-width: 60ch;
     color: #ffffff;
-  }
-  
-  a {
+}
+
+a {
     color: currentcolor;
-  }
-  
-  /* Utilities */
-  .auto-grid {
+}
+
+
+/* Utilities */
+
+.auto-grid {
     display: grid;
-    grid-template-columns: repeat(
-      auto-fill,
-      minmax(var(--auto-grid-min-size, 14rem), 1fr)
-    );
+    grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size, 14rem), 1fr));
     grid-gap: var(--auto-grid-gap, 0);
     padding: 0;
-  }
-  
-  .flow > * + * {
+}
+
+.flow>*+* {
     margin-top: var(--flow-space, 1em);
-  }
-  
-  /* Composition */
-  .team {
+}
+
+
+/* Composition */
+
+.team {
     --flow-space: 2em;
-  }
-  
-  /* Blocks */
-  .profile {
+}
+
+
+/* Blocks */
+
+.profile {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -68,10 +253,10 @@ body{
     backface-visibility: hidden;
     text-decoration: none;
     overflow: hidden;
-  }
-  
-  .profile::before,
-  .profile::after {
+}
+
+.profile::before,
+.profile::after {
     content: "";
     width: 100%;
     height: 100%;
@@ -79,46 +264,24 @@ body{
     /*inset: 0;*/
     top: 0;
     left: 0;
-  }
-  
-  .profile::before {
-    background: linear-gradient(
-      to top,
-      hsl(0 0% 0% / 0.79) 0%,
-      hsl(0 0% 0% / 0.787) 7.8%,
-      hsl(0 0% 0% / 0.779) 14.4%,
-      hsl(0 0% 0% / 0.765) 20.2%,
-      hsl(0 0% 0% / 0.744) 25.3%,
-      hsl(0 0% 0% / 0.717) 29.9%,
-      hsl(0 0% 0% / 0.683) 34.3%,
-      hsl(0 0% 0% / 0.641) 38.7%,
-      hsl(0 0% 0% / 0.592) 43.3%,
-      hsl(0 0% 0% / 0.534) 48.4%,
-      hsl(0 0% 0% / 0.468) 54.1%,
-      hsl(0 0% 0% / 0.393) 60.6%,
-      hsl(0 0% 0% / 0.31) 68.3%,
-      hsl(0 0% 0% / 0.216) 77.3%,
-      hsl(0 0% 0% / 0.113) 87.7%,
-      hsl(0 0% 0% / 0) 100%
-    );
+}
+
+.profile::before {
+    background: linear-gradient(to top, hsl(0 0% 0% / 0.79) 0%, hsl(0 0% 0% / 0.787) 7.8%, hsl(0 0% 0% / 0.779) 14.4%, hsl(0 0% 0% / 0.765) 20.2%, hsl(0 0% 0% / 0.744) 25.3%, hsl(0 0% 0% / 0.717) 29.9%, hsl(0 0% 0% / 0.683) 34.3%, hsl(0 0% 0% / 0.641) 38.7%, hsl(0 0% 0% / 0.592) 43.3%, hsl(0 0% 0% / 0.534) 48.4%, hsl(0 0% 0% / 0.468) 54.1%, hsl(0 0% 0% / 0.393) 60.6%, hsl(0 0% 0% / 0.31) 68.3%, hsl(0 0% 0% / 0.216) 77.3%, hsl(0 0% 0% / 0.113) 87.7%, hsl(0 0% 0% / 0) 100%);
     transition: 300ms opacity linear;
-  }
-  
-  .profile::after {
-    background: linear-gradient(
-      45deg,
-      hsl(5 97% 63% / 0.7) 0,
-      hsl(5 97% 63% / 0) 100%
-    );
+}
+
+.profile::after {
+    background: linear-gradient(45deg, hsl(5 97% 63% / 0.7) 0, hsl(5 97% 63% / 0) 100%);
     opacity: 0;
     transition: 300ms opacity linear;
-  }
-  
-  .profile > * {
+}
+
+.profile>* {
     z-index: 1;
-  }
-  
-  .profile img {
+}
+
+.profile img {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -129,68 +292,71 @@ body{
     object-fit: cover;
     filter: grayscale(1);
     transition: filter 200ms ease, transform 250ms linear;
-  }
-  
-  .profile h2,
-  .profile p {
+}
+
+.profile h2,
+.profile p {
     transform: translateY(2ex);
-  }
-  
-  .profile h2 {
+}
+
+.profile h2 {
     font-size: 1.7rem;
     line-height: 1.2;
     font-weight: 900;
     letter-spacing: 0.03ch;
     transition: 300ms transform ease;
-  }
-  
-  .profile p {
+}
+
+.profile p {
     font-size: 1.2rem;
     font-weight: 500;
-  }
-  
-  .profile p {
+}
+
+.profile p {
     opacity: 0;
     transition: 300ms opacity linear, 300ms transform ease-in-out;
-  }
-  
-  .profile:focus {
+}
+
+.profile:focus {
     outline: 0.5rem solid white;
     outline-offset: -0.5rem;
-  }
-  
-  .profile:hover :is(h2, p),
-  .profile:focus :is(h2, p) {
+}
+
+.profile:hover :is(h2,
+p),
+.profile:focus :is(h2,
+p) {
     transform: none;
-  }
-  
-  .profile:hover::after,
-  .profile:focus::after,
-  .profile:hover::before,
-  .profile:focus::before {
+}
+
+.profile:hover::after,
+.profile:focus::after,
+.profile:hover::before,
+.profile:focus::before {
     opacity: 0.7;
-  }
-  
-  .profile:hover p,
-  .profile:focus p {
+}
+
+.profile:hover p,
+.profile:focus p {
     opacity: 1;
     transition-delay: 200ms;
-  }
-  
-  .profile:hover img,
-  .profile:focus img {
+}
+
+.profile:hover img,
+.profile:focus img {
     filter: grayscale(0);
     transform: scale(1.05) rotate(1deg);
-  }
-  h2{
+}
+
+h2 {
     text-decoration: none;
-  }
-  a:hover{
+}
+
+a:hover {
     color: #AC99F2;
-  }
+}
 
-
-  .rodape{
+.rodape {
     background-color: #611DF2;
     color: white;
     height: auto;
@@ -198,44 +364,180 @@ body{
     font-size: 14px;
     font-family: helvetica;
 }
-.rodape a{
+
+.rodape a {
     text-decoration: none;
     color: white;
 }
-.rodape p{
+
+.rodape p {
     margin-bottom: 5px;
 }
-.rodape-div{
+
+.rodape-div {
     display: flex;
     flex-wrap: wrap;
-    width:100%;
+    width: 100%;
     margin: auto;
     align-items: stretch;
     padding: 60px 10px 40px 10px;
 }
-.rodape-div-1, .rodape-div-2, .rodape-div-3, .rodape-div-4{
+
+.rodape-div-1,
+.rodape-div-2,
+.rodape-div-3,
+.rodape-div-4 {
     display: flex;
     width: calc(100% / 4 - 20px);
     padding: 10px;
 }
-.rodape span{
+
+.rodape span {
     font-size: 20px;
     color: white;
 }
-.rodape-direitos{
+
+.rodape-direitos {
     width: 100%;
     background-color: black;
     padding: 10px;
     margin: 0px;
     text-align: center;
 }
+
+
 /*mobile*/
+
 @media (max-width: 768px) {
-    .rodape-div-1, .rodape-div-2, .rodape-div-3, .rodape-div-4{
+    .rodape-div-1,
+    .rodape-div-2,
+    .rodape-div-3,
+    .rodape-div-4 {
         width: calc(50% - 20px);
         padding: 10px;
     }
-    .rodape-div{
+    .rodape-div {
         padding: 60px 0px 40px 0px;
     }
+}
+
+
+/**************************************/
+
+
+/* From Uiverse.io by iZOXVL */
+
+.boton-elegante {
+    padding: 15px 30px;
+    border: 2px solid #2c2c2c;
+    background-color: #1a1a1a;
+    color: #ffffff;
+    font-size: 1.2rem;
+    cursor: pointer;
+    border-radius: 30px;
+    transition: all 0.4s ease;
+    outline: none;
+    position: relative;
+    overflow: hidden;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.boton-elegante::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 70%);
+    transform: scale(0);
+    transition: transform 0.5s ease;
+}
+
+.boton-elegante:hover::after {
+    transform: scale(4);
+}
+
+.boton-elegante:hover {
+    border-color: #666666;
+    background: #7700ff;
+}
+
+#botao {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 2%;
+}
+
+
+/*********************/
+
+
+.albuns {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 300px; /* Aumenta a largura do card */
+    text-align: center;
+    margin: 20px;
+    
+}
+
+.card-img {
+    width: 100%; /* A imagem ocupa 100% da largura do card */
+    height: 300px; /* Define uma altura fixa para a imagem */
+    border-radius: 10px 10px 0 0; /* Bordas arredondadas apenas na parte superior */
+    object-fit: cover; /* A imagem mantém suas proporções e cobre o espaço */
+    padding: 4%;
+}
+
+.card-title {
+    font-size: 1.5em; /* Tamanho do título */
+    margin: 10px 0;
+}
+
+.card-text {
+    font-size: 1em; /* Tamanho do texto */
+    margin: 10px 15px;
+    color: #666;
+}
+
+.card-date {
+    display: block;
+    font-size: 0.9em; /* Tamanho da fonte da data */
+    color: #999;
+    margin-bottom: 10px;
+}
+
+@media (max-width: 600px) {
+    .albuns {
+        flex-direction: column; /* Muda a direção do flex para coluna em telas menores */
+        align-items: center; /* Centraliza os cards */
+    }
+
+    .card {
+        width: 90%; /* Ajusta a largura do card em telas menores */
+    }
+}
+h3{
+    font-family: "Unlock", serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+    font-size: 40px;
+    color: #AC99F2;
+
+    background-color: #f0f8ff; /* Cor de fundo */
+    border-radius: 8px;
+    padding: 10px 15px; /* Espaçamento interno */
 }
