--- a/style1.css
+++ b/style1.css
@@ -4,7 +4,8 @@
     width: 100%;
     margin: auto;
 }
-body{
+
+body {
     margin: 0;
 }
 
@@ -48,23 +49,31 @@ nav ul {
 @media all and (max-width: 767px) {
     nav ul {
         display: flex;
-        flex-direction: column; /* Empilha os elementos verticalmente */
-        align-items: center; /* Centraliza os itens */
-        width: 100%; /* Garante que ocupe toda a largura */
+        flex-direction: column;
+        /* Empilha os elementos verticalmente */
+        align-items: center;
+        /* Centraliza os itens */
+        width: 100%;
+        /* Garante que ocupe toda a largura */
     }
 
     .info {
-        width: 100%; /* Garante que a informação ocupe toda a largura */
-        margin: 10px 0; /* Espaçamento entre os itens */
-        text-align: center; /* Centraliza o texto */
+        width: 100%;
+        /* Garante que a informação ocupe toda a largura */
+        margin: 10px 0;
+        /* Espaçamento entre os itens */
+        text-align: center;
+        /* Centraliza o texto */
     }
 
     .info span {
-        font-size: 25px; /* Ajusta o tamanho da fonte para dispositivos menores */
+        font-size: 25px;
+        /* Ajusta o tamanho da fonte para dispositivos menores */
     }
 
     .info strong {
-        font-size: 12px; /* Ajusta o tamanho da fonte para dispositivos menores */
+        font-size: 12px;
+        /* Ajusta o tamanho da fonte para dispositivos menores */
     }
 }
 
@@ -101,7 +110,7 @@ nav ul:nth-child(1) {
     background-color: rgba(10, 10, 10, .9);
     background-blend-mode: overlay;
 
-    
+
 }
 
 nav ul:nth-child(2) {
@@ -167,6 +176,30 @@ nav ul:nth-child(11) {
 
 nav ul:nth-child(12) {
     background-image: url("img/badvillan.jpg");
+    background-color: rgba(10, 10, 10, .9);
+    background-blend-mode: overlay;
+}
+
+nav ul:nth-child(13) {
+    background-image: url("img/astro.jpg");
+    background-color: rgba(10, 10, 10, .9);
+    background-blend-mode: overlay;
+}
+
+nav ul:nth-child(14) {
+    background-image: url("img/everglow.jpg");
+    background-color: rgba(10, 10, 10, .9);
+    background-blend-mode: overlay;
+}
+
+nav ul:nth-child(15) {
+    background-image: url("img/riize.jpg");
+    background-color: rgba(10, 10, 10, .9);
+    background-blend-mode: overlay;
+}
+
+nav ul:nth-child(16) {
+    background-image: url("img/seventeen.jpg");
     background-color: rgba(10, 10, 10, .9);
     background-blend-mode: overlay;
 }
